# simpleiotprocessor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  processmgr.toml
config/: config.toml
crates/ddshift/: Cargo.toml
crates/ddshift/src/: lib.rs
crates/rbmq/: Cargo.toml
crates/rbmq/src/: lib.rs
crates/simpleftp/: Cargo.toml
crates/simpleftp/src/: lib.rs
infrastructure/composer/: ftpserver.yaml  fullapp.yaml
infrastructure/scripts/: domainshift.service  installshiftdomain.sh  processmgr.toml
src/: Cargo.toml
src/coreweb/: coreweb.rs  parse.rs  types.rs
src/coreweb/handler/: index.rs  launch.rs  mod.rs
src/coreweb/parse/: config.rs  response.rs
src/coreweb/static/: index.html
src/pmm/: cfg.rs  log.rs  pmmgr.rs  proc.rs  sig.rs
src/simweb/: dynamic_response.rs  headers.rs  router.rs  server.rs
src/simweb/public/: static.html
tests/documents/: samplenews.xml
