[workspace]
resolver = "2"
members = [
	"crates/ddshift", 
	"crates/rbmq", 
	"crates/simpleftp",
]

[workspace.package]
name = "simpleiotprocessor"
version = "0.0.1"
homepage = "https://github.com/solmon/simpleiotprocessor"
description = "Simple IoT Gateway with embedded web server"
repository = "https://github.com/solmon/simpleiotprocessor"
authors = ["Solmon <solmon@gmail.com>"]
keywords = [
	"web",
	"IoT",
	"development",
    "localhost"
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE*",
	"README.md",
	"infrastructure/**/*",
	"crates/**/*",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "time"] }
config = "0.14.0"
serde_derive = "1.0"
actix-web = "4.8.0"
serde = {version= "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
configparser = "3.1.0"
toml = "0.8.14"
serde_cbor = "0.11.2"
anyhow = "1.0.86"
actix-files = "0.6.6"
actix-cors = "0.7.0"

# [[example]]
# name = "statusweb"
# path = "src/simweb/server.rs"

# [[example]]
# name = "pmgr"
# path = "src/pmm/pmmgr.rs"
