[package]
name = "simple iot processing sample"

[dependencies]
config = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "time"] }
serde = { workspace = true }
serde_derive = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-cors = { workspace = true }
anyhow = { workspace = true }
configparser = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
simpleftp = { path = "crates/simpleftp" }
rbmq = { path = "crates/rbmq" }
ddshift = { path = "crates/ddshift" }
warp = "0.3"
pathdiff = "0.2"
clap =  {version = "4.5.4", features = ["cargo","derive"]}
futures = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
simple-server = "0.4.0"
http = "1.1.0"
httparse = "1.2.3"
log = "0.4.22"
env_logger = "0.11.3"
tokio-stream = { version = "0.1.15", features = ["io-util"] }
alogfmt = "0.1.0"
command-group = { version = "5.0.1", features = ["with-tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
shell-words = "1.1.0"

[dev-dependencies]
env_logger = "0.11.3"

[[bin]]
name = "webserver"
path = "src/simweb/server.rs"

[[bin]]
name = "coreweb"
path = "src/coreweb/coreweb.rs"

[[bin]]
name = "xmltoqint"
path = "src/xmltoqint/bin/main.rs"

[[bin]]
name = "pmgr"
path = "src/pmm/pmmgr.rs"